WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/ConvertLeadSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ConvertLeadSettings</label>
</CustomObject>