WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Create_New_Task_Default__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Task_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default value for the &quot;Create Task&quot; field.</description>
    <inlineHelpText>The default value for the &quot;Create Task&quot; field.</inlineHelpText>
    <label>Create Task Default</label>
    <type>Checkbox</type>
</CustomField>