WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Do_Not_Create_New_Opp_Default__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_New_Opp_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default value for the &quot;Do not create a new opportunity upon conversion&quot; field.</description>
    <inlineHelpText>The default value for the &quot;Do not create a new opportunity upon conversion&quot; field.</inlineHelpText>
    <label>Do Not Create New Opp Default</label>
    <type>Checkbox</type>
</CustomField>