WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Enable_Lead_Development_Split__c.field-meta.xml
<CustomField>
    <fullName>Enable_Lead_Development_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Lead Development Split</label>
    <type>Checkbox</type>
</CustomField>