WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Lead_Converted_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converted_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Converted Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>