WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Opportunity_Close_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the number of days to push the opportunity close date out.</description>
    <inlineHelpText>This is the number of days to push the opportunity close date out.</inlineHelpText>
    <label>Opportunity Close Date Offset</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>