WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Opportunity_Close_Date_To_Month_End__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date_To_Month_End__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting pushes the opportunity close date to the end of the month based on the value returned after the Opportunity Close Date Offset is applied.</description>
    <inlineHelpText>This setting pushes the opportunity close date to the end of the month based on the value returned after the Opportunity Close Date Offset is applied.</inlineHelpText>
    <label>Opportunity Close Date to Month End</label>
    <type>Checkbox</type>
</CustomField>