WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Reminder_Minutes_Interval__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Minutes_Interval__c</fullName>
    <defaultValue>30</defaultValue>
    <description>This is the interval in minutes that is used to build out the reminder time select list. Must be greater than or equals to 5.</description>
    <inlineHelpText>This is the interval in minutes that is used to build out the reminder time select list. Must be greater than or equals to 5.</inlineHelpText>
    <label>Reminder Minutes Interval</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>