WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Select_Account_if_Found__c.field-meta.xml
<CustomField>
    <fullName>Select_Account_if_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability for user to select account or create new one if related account is found.</description>
    <inlineHelpText>Ability for user to select account or create new one if related account is found.</inlineHelpText>
    <label>Select Account if Found</label>
    <type>Checkbox</type>
</CustomField>