WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Select_Contact_if_Found__c.field-meta.xml
<CustomField>
    <fullName>Select_Contact_if_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability for user to select contact or create new one if related contact is found.</description>
    <inlineHelpText>Ability for user to select contact or create new one if related contact is found.</inlineHelpText>
    <label>Select Contact if Found</label>
    <type>Checkbox</type>
</CustomField>