WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Send_Email_To_Owner_Default__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_To_Owner_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default value for the &quot;Send Email to Owner&quot; field.</description>
    <inlineHelpText>The default value for the &quot;Send Email to Owner&quot; field.</inlineHelpText>
    <label>Send Email to Owner Default</label>
    <type>Checkbox</type>
</CustomField>