WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Show_Convert_And_Go_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Show_Convert_And_Go_To_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turns on and off the button to convert and jump to the account after converting the lead.</description>
    <inlineHelpText>Turns on and off the button to convert and jump to the account after converting the lead.</inlineHelpText>
    <label>Show Convert and go to Account</label>
    <type>Checkbox</type>
</CustomField>