WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Show_Convert_And_Go_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Show_Convert_And_Go_To_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Turns on and off the button to convert and jump to the contact after converting the lead.</description>
    <inlineHelpText>Turns on and off the button to convert and jump to the contact after converting the lead.</inlineHelpText>
    <label>Show Convert and go to Contact</label>
    <type>Checkbox</type>
</CustomField>