WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Show_Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Opp_Close_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This settings turns on an off the opportunity close date field.</description>
    <inlineHelpText>This settings turns on an off the opportunity close date field.</inlineHelpText>
    <label>Show Opp Close Date</label>
    <type>Checkbox</type>
</CustomField>