WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Show_Send_Email_To_Owner__c.field-meta.xml
<CustomField>
    <fullName>Show_Send_Email_To_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Send Email to Owner</label>
    <type>Checkbox</type>
</CustomField>