WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Task_Due_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Date_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Task Due Date Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>