WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Task_Priority__c.field-meta.xml
<CustomField>
    <fullName>Task_Priority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>