WexGit/Wex_DX/force-app/main/default/objects/ConvertLeadSettings__c/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>